log

Thu 14 Mar 2024 08:21:09 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
7266127
Thu 14 Mar 2024 08:21:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
ab35978
Thu 14 Mar 2024 08:25:05 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
3d7c84a
Thu 14 Mar 2024 08:26:46 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
e924015
Thu 14 Mar 2024 08:30:16 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 10/70
54bf301
Thu 14 Mar 2024 08:33:44 PM UTC: 
 exercises.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:12: error: ‘temp’ may be used uninitialized [-Werror=maybe-uninitialized]
   33 |     arr[i] = temp;
      |     ~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
776d139
Thu 14 Mar 2024 08:34:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
07d5d6f
Thu 14 Mar 2024 08:34:45 PM UTC: 
 exercises.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 20/70
611817d
Thu 14 Mar 2024 08:41:39 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/string.h:33,
                 from exercises.c:5,
                 from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:46:21: error: invalid initializer
   46 |   int nuevo_arr[] = NULL;
      |                     ^~~~
In file included from test.c:1:
exercises.c:51:7: error: value computed is not used [-Werror=unused-value]
   51 |       *newSize++;
      |       ^~~~~~~~~~
exercises.c:56:10: error: function returns address of local variable [-Werror=return-local-addr]
   56 |   return nuevo_arr;
      |          ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8e9ef85
